# CainEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  Todo.txt
Application.Win32/: Benchmark.cpp  CMakeLists.txt  main.cpp
CMake/: CMakeLists.txt
Common/: CMakeLists.txt  Callstack.cpp  JsonParser.cpp  Logging.cpp  Precomp.h  Source.cpp  Tasks.cpp
Content/: CMakeLists.txt
Content/Config/: Rendering.json  Settings.json  Shaders.json
Content/Shaders/: DX11.shaders  DX12.shaders
Content/Shaders source/: PixelShader.hlsl  Shared.hlsli  VertexShader.hlsl
Dependencies/: CMakeLists.txt
Editor/: CMakeLists.txt  Main.cpp  Precomp.h  ShaderSourceManager.cpp  ShaderSourceManager.h
Editor.ShaderCompiler/: CMakeLists.txt  DXCompiler.cpp  DXCompiler.h  ICompiler.h  Precomp.cpp  Precomp.h
Engine/: CMakeLists.txt  Engine.cpp  Precomp.h
EntitySystem/: CMakeLists.txt  CTransform.cpp  EntityID.cpp  Precomp.h  Scene.cpp  Transform.cpp
Graphics/: CMakeLists.txt  CameraManager.cpp  Factory.cpp  Material.cpp  Model.cpp  ModelManager.cpp  Precomp.h  Renderer.cpp  RendererRenderFrame.cpp  ShaderManager.cpp
Graphics.DX11/: CMakeLists.txt  DX11Factory.cpp  DX11Factory.h  DX11RenderContext.cpp  DX11RenderContext.h  DX11Renderer.cpp  DX11Renderer.h  DX11RendererIDisplaySettings.cpp  DX11RendererIRenderer.cpp  DX11RendererRenderFrame.cpp  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  EnumConverter.cpp  EnumConverter.h  InputLayoutResolver.cpp  InputLayoutResolver.h  Precomp.h  VertexData.h
Graphics.DX12/: CMakeLists.txt  D3DX12.h  DX12Renderer.cpp  DX12Renderer.h  Event.cpp  Event.h  Precomp.cpp  Precomp.h
Graphics.DX12/Shaders/: SimpleTriangle.hlsl
Graphics.Vulkan/: APIFunctions.cpp  APIFunctions.h  CMakeLists.txt  Precomp.cpp  Precomp.h  VkPtr.h  VulkanRenderer.cpp  VulkanRenderer.h
Platform/: CMakeLists.txt  Precomp.h
Platform.Linux/: CMakeLists.txt  EnumConverter.cpp  EnumConverter.h  ILinuxCoreFactory.cpp  LinuxCoreFactory.cpp  LinuxCoreFactory.h  LinuxWindow.cpp  LinuxWindow.h  Precomp.h
Platform.Win32/: CMakeLists.txt  EnumConverter.cpp  EnumConverter.h  Precomp.cpp  Precomp.h  Win32CoreFactory.cpp  Win32CoreFactory.h  Win32Monitor.cpp  Win32Monitor.h  Win32Process.cpp  Win32Process.h  Win32Window.cpp  Win32Window.h  Win32WindowInternal.cpp
ResourceSystem/: CMakeLists.txt  Precomp.h
